Galleon
-------

Version 2.5.0:
----------------------
* Fixed built-in Photos application to lay out the grid better for HD.
* Fixed JPG image tag reading for Photos
* Added a new HD Photos plugin that will download, install and run the TiVo Desktop hdphotos 
    HME application integrated into Galleon similar to what it does for TiVo Desktop
* Reimplemented skin resource loading so they don't use as much memory and cpu
* Added scalable backgrounds that fit the screen in HD mode for pictures and music
* Fixed the HD playbar in the music app so it draws properly
* Fixed layout on music player screen when in HD mode
* Increased font size on music app in HD mode for all screens
* Fixed screen saver on music app to fill the entire screen
* Fixed lyrics downloading to grab from a different source since lyrictracker is down
* Fix MacOS problems (tracker #1760027)
* Upgraded Movie Rentals app to 0.7
* Fixed missing jars in windows installer
* Added service wrapper for unix release and a Makefile to do "make install" or "make uninstall"

Version 2.4.1:
----------------------
* Turned off HD for applications that don't need it (e.g. top level menu,
  Weather since its maps are small)
* Updated Mac OS X install to put applications in subdirectory:
  /Applications/Galleon/
* Fixed Mac OS launch scripts to enable quit function
* Fixed Movies application (needed an update to parse HTML output change from data source)
* Fixed Windows installer JRE detection (accepts Java 6)
* Fixed MusicOrganizer MP3 count (1746310)
* Upgrade to htmlparser-1.6 (fixes movierentals add-on application)
* Added movieRentals application to distribution
* Fixed log file location on windows to put logs inside the logs directory

Version 2.4.0 alpha:
----------------------
HD application support.  Try out HD photos!
Local forecast page added to weather.
Known problems:
 * tracker on music in HD is goofy
 * galleon skins in HD don't cover screen--use tivo skins
 * lots of layout glitches in HD